# aws-sagemaker-tdc-admet-training-platform

./: .dockerignore  .gitignore  CODEX_IMPLEMENTATION_PROMPTS.md  PROJECT_GOALS.md  README.md  pyproject.toml  requirements-ci.txt  requirements-tdc-download.txt  requirements.txt
configs/: ames.yaml  bbb_martins.yaml  caco2_wang.yaml  chemberta_100m_multitask_classification.yaml  chemberta_100m_single_task_ames.yaml  chemberta_100m_single_task_bbb_martins.yaml  chemberta_100m_single_task_herg_karim.yaml  final_test_evaluation.yaml  herg_karim.yaml  multitask_classification.yaml  multitask_regression.yaml  multitask_regression_source_audit.yaml  multitask_source_audit.yaml  sagemaker_evaluation.yaml  sagemaker_processing.yaml  sagemaker_training.yaml  single_task_ames.yaml  single_task_bbb_martins.yaml  single_task_herg_karim.yaml  single_task_regression_caco2_wang.yaml  single_task_regression_lipophilicity_astrazeneca.yaml  single_task_regression_ppbr_az.yaml  single_task_regression_solubility_aqsoldb.yaml  single_task_regression_vdss_lombardo.yaml
docs/: CODEX_MULTITASK_REGRESSION_PLAN.md  chemberta_100m_comparison_protocol.md  mlops_extension_roadmap.md  multitask_chemberta_implementation_plan.md  multitask_cluster_readiness.md  multitask_regression_data_provenance.md  tdc_download_environment.md
model_registry/: bbb_martins_baseline_toy.json  caco2_wang_baseline_toy.json  herg_karim_baseline_toy.json
sagemaker/: evaluate_models.py  evaluation_requirements.txt  prepare_tdc_dataset.py  processing_requirements.txt  requirements.txt  train_chemberta.py
(+144 files in other folders)
